// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondPillarStatusBox renders the PIK flow when fund PIK number present 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Memo(MemoizedFormattedMessage)
        id="account.status.choice.pillar.second.pik"
        values={
          Object {
            "secondPillarPikNumber": "EE1234567",
          }
        }
      />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.second"
    />
  }
  showAction={true}
/>
`;

exports[`SecondPillarStatusBox renders the choice flow when fund selection incomplete 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.second"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/2nd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.join.tuleva.2"
    />
  </Link>
</StatusBoxRow>
`;

exports[`SecondPillarStatusBox renders the success flow 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.second"
    />
  }
  ok={true}
  showAction={true}
/>
`;

exports[`SecondPillarStatusBox renders the transfer flow when fund transfers incomplete 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Memo(MemoizedFormattedMessage)
        id="account.status.choice.pillar.second.transferIncomplete"
      />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.second"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/2nd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.transfer.tuleva.2"
    />
  </Link>
</StatusBoxRow>
`;

exports[`SecondPillarStatusBox renders the withdrawal flow when withdrawal is in progress 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Memo(MemoizedFormattedMessage)
        id="account.status.choice.pillar.second.withdraw"
      />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.second"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/applications/undefined/cancellation"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.second.withdraw.cancel"
    />
  </Link>
</StatusBoxRow>
`;
